IMPALA-1915: fix query hang in BufferedBlockMgr:FindBlock()

Multiple threads (the main fragment thread and build side threads) can
think they are waiting for the same block write in FindBlock(), but
there might not be enough block writes outstanding for all threads.  So,
when a write completes, let each thread re-evaluate whether it should
give up because there's not enough blocks or initiate another write or
just keep waiting.

Change-Id: Iba40e12c72e0d48c094ee18b1565c46ea30f853f
Reviewed-on: http://gerrit.cloudera.org:8080/276
Reviewed-by: Ippokratis Pandis <ipandis@cloudera.com>
Reviewed-by: Matthew Jacobs <mj@cloudera.com>
Tested-by: Internal Jenkins